# stadata

./: .gitignore  LICENCSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
.pytest_cache/v/cache/: nodeids
stadata/: __init__.py  main.py  material.py  semver_demo.py
stadata.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  pytest.ini  test_list.py  test_view.py
