[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "stadata"
version = "0.1.1"
description = "API for get all statistics data from BPS"
urls = {homepage = "https://github.com/bps-statistics/stadata"}
requires-python = ">=3.7"
authors = [
    {name = "Ignatius Sandyawan", email = "isandyawan@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License"
]

keywords = [
    "bps dataset utility indonesia"
]
dynamic = ["readme", "dependencies"]

[tool.setuptools]
packages = ["stadata"]

# Taken from https://github.com/pypa/setuptools/blob/d138ec08efc2dbaebb8752e215e324f38bd807a2/setuptools/tests/config/test_pyprojecttoml.py#L68
[tool.setuptools.dynamic.readme]
file = ["README.md"]
content-type = "text/markdown"

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov pytrends/"