[tool.poetry]
name = "stadata"
version = "1.0.0"
description = "API for get all statistics data from BPS"
authors = ["Ignatius Sandyawan <isandyawan@gmail.com>"]
urls = {homepage = "https://github.com/bps-statistics/stadata"}
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License"
]

keywords = [
    "bps dataset utility indonesia"
]
packages = [{include = "stadata"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
tqdm = "^4.65.0"
pandas = "^2.0.3"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
lxml = "^4.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true

[tool.pytest.ini_options]
pythonpath = [
  "."
]